--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-admin-bootstrapped==2.5.4
 django-bootstrap3==6.1.0
 django-braces==1.8.1
 django-oauth-toolkit==0.9.0
+django-spurl==0.6.1
 gunicorn==19.3.0
 mysqlclient==1.3.6
 oauthlib==1.0.1
